# numba-lapack

./: .gitignore  README.md  pyproject.toml
benchmarks/: bench_blas_lapack.py
docs/: autogen.md  autogen_from_pxd.md
docs/api/: BLAS_LAPACK_autogen.md
numba_lapack/: __init__.pyi
src/: __init__.py
test/: conftest.py
tools/: gen_docs_stubs_from_pxd.py
